--- a/themes/PaperModX/assets/css/common/main.css
+++ b/themes/PaperModX/assets/css/common/main.css
@@ -112,6 +112,18 @@ mark {
     max-width: calc(var(--post-width) + var(--gap) * 2);
 }
 
+.post-warp .post-content .image-caption:not(:empty) {
+    min-width: 20%;
+    max-width: max-content;
+    /* display: inline-block; */
+    padding: 3px;
+    margin: 8px auto;
+    border-bottom: 1px solid #d9d9d9;
+    font-size: 14px;
+    color: #969696;
+    line-height: 1.7;
+}
+
 .page-header h1 {
     font-size: 40px;
     margin-bottom: var(--content-gap);
