fix: heatmap bug

--- a/layouts/shortcodes/heatmap.html
+++ b/layouts/shortcodes/heatmap.html
@@ -22,6 +22,8 @@
         --heatmap-colors-light-1: #7bc96f;
         --heatmap-colors-light-2: #239a3b;
         --heatmap-colors-light-3: #196127;
+        --tooltip-bg-light: #fff;
+        --tooltip-textstyle-light: #1c1a1b;
 
         --heatmap-bgBorder-dark: #1d1e20;
         --heatmap-bg-dark: #585c59;
@@ -29,6 +31,8 @@
         --heatmap-colors-dark-1: #7bc96f;
         --heatmap-colors-dark-2: #239a3b;
         --heatmap-colors-dark-3: #196127;
+        --tooltip-bg-dark: #585c59;
+        --tooltip-textstyle-dark: #fff;
     }
 </style>
 </head>
@@ -90,6 +94,19 @@
             : getCSSVariableValue('--heatmap-bgBorder-light');
     }
 
+    function getTooltipBgColor(){
+        const currentTheme = getCurrentTheme();
+        return currentTheme === 'dark'
+            ? getCSSVariableValue('--tooltip-bg-dark')
+            : getCSSVariableValue('--tooltip-bg-light');
+    }
+    function getTextStyleColor() {
+        const currentTheme = getCurrentTheme();
+        return currentTheme === 'dark'
+            ? getCSSVariableValue('--tooltip-textstyle-dark')
+            : getCSSVariableValue('--tooltip-textstyle-light');
+    }
+
     function getCSSVariableValue(variableName) {
         return getComputedStyle(document.documentElement)
             .getPropertyValue(variableName).trim();
@@ -106,11 +123,13 @@
         const theme = getCurrentTheme();
         const chartDom = document.getElementById('heatmap');
         // Initialize chart with appropriate theme
-        myChart = echarts.init(chartDom, theme === 'dark' ? 'dark' : 'light');
+        myChart = echarts.init(chartDom);
         // Reapply the option with theme-specific colors
         //option.visualMap.inRange.color = getThemeColors();
         option.calendar.itemStyle.color = getThemeBgColor();
         option.calendar.itemStyle.borderColor = getThemeBgBorderColor();
+        option.tooltip.backgroundColor = getTooltipBgColor();
+        option.tooltip.textStyle.color = getTextStyleColor();
         myChart.setOption(option);
     }
 
@@ -227,6 +246,10 @@
         tooltip: {
             hideDelay: 1000,
             enterable: true,
+            textStyle: {
+                color: getTextStyleColor(),
+            },
+            backgroundColor: getTooltipBgColor(),
             formatter: function (p) {
                 const date = p.data[0];
                 const posts = dataMap.get(date);
@@ -240,6 +263,7 @@
                 }
                 return content;
             }
+
         },
         visualMap: {
             type: 'piecewise',
