--- a/themes/PaperModX/layouts/partials/cover.html
+++ b/themes/PaperModX/layouts/partials/cover.html
@@ -6,26 +6,12 @@
     {{- $addLink := (and site.Params.cover.linkFullImages (not $.IsHome)) }}
     {{- $cover := (.Resources.ByType "image").GetMatch (printf "*%s*" (.Params.cover.image)) }}
     {{- if $cover -}}
-    {{- $sizes := (slice "360" "480" "720" "1080" "1500") }}
-    {{- $responsiveImages := (.Params.cover.responsiveImages | default site.Params.cover.responsiveImages) | default true }}
-    {{- if (and $responsiveImages (eq hugo.IsProduction true)) }}
     <img loading="lazy"
-         srcset="{{ range $size := $sizes -}}
-                         {{ if (ge $cover.Width $size) -}}
-                             {{ printf "%s %sw," (($cover.Resize (printf "%sx" $size)).Permalink) $size -}}
-    {{ end -}}
-    {{ end }}{{$cover.Permalink}} {{printf "%dw" $cover.Width}}"
-    sizes="(min-width: 768px) 720px, 100vw"
-    src="{{ $cover.Permalink }}"
-    alt="{{ $alt }}"
-    width="{{ $cover.Width }}"
-    height="{{ $cover.Height }}">
-    {{- else }}
-    <img loading="lazy"
-         src="{{ (path.Join .RelPermalink .Params.cover.image) | absURL }}"
-         alt="{{ $alt }}">
-    {{- end }}
-
+         src="{{ $cover.Permalink }}"
+         alt="{{ $alt }}"
+         width="{{ $cover.Width }}"
+         height="{{ $cover.Height }}"
+         style="color-profile: srgb; image-rendering: auto;">
     {{- else }}{{/* For absolute URLs and external links */}}
     {{- if $addLink }}<a href="{{ (.Params.cover.image) | absURL }}" target="_blank"
                          rel="noopener noreferrer">{{ end -}}
@@ -38,7 +24,6 @@
     {{- end }}
     {{- if $addLink }}</a>{{ end -}}
     {{- end }}
-
 </figure>
 {{- end }}{{/* End image */}}
 {{- end -}}{{/* End context */ -}}
