--- a/themes/PaperModX/layouts/partials/footer.html
+++ b/themes/PaperModX/layouts/partials/footer.html
@@ -188,14 +188,15 @@
     }
     {{- end -}}
     var allSum = 0;
-    var postSum = 1;
+    var postSum = 0;
     var data = [];
     for (const [key, value] of dataMap.entries()) {
       var sum = 0;
       for (const v of value) {
         sum += v.wordCount;
+        postSum = postSum + 1
       }
-      postSum = postSum + 1
+
       allSum = sum + allSum;
       data.push([key, (sum / 1000).toFixed(1)]);  // 保留一位小数的千字单位
     }
@@ -240,7 +241,7 @@
 
 
 
-    const textContent = `總字數：${allSum}  文章總篇數：${postSum}`;
+    const textContent = `總字數：${allSum}  文章總篇數：${postSum-2}`;
 
 
     option = {
