--- a/themes/PaperModX/layouts/_default/baseof.html
+++ b/themes/PaperModX/layouts/_default/baseof.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
 <html lang="{{ .Params.language | default .Language.Lang }}" dir="{{ .Language.LanguageDirection | default "auto" }}">
 
 <head>
