--- a/themes/PaperModX/layouts/blogroll/section.html
+++ b/themes/PaperModX/layouts/blogroll/section.html
@@ -1,30 +1,70 @@
-{{/* section is AKA list */}}
-
 {{- define "main" }}
+
 <header class="page-header">
-  <h1>{{ .Title }}</h1>
+  <h1>
+    {{- .Title -}}
+  </h1>
+  {{- if .Description }}
+  <div class="post-description">
+    {{ .Description | markdownify }}
+  </div>
+  {{- end }}
+  {{- partial "inline_links.html" . -}}
 </header>
 
-<article class="links-container">
-  <blockquote>
-    <p>{{ .Description }}</p>
-  </blockquote>
-
-  <div class="links">
-    {{ range site.Params.Links }}
-      <div class="item">
-        <div class="title">
-          {{- $url := urls.Parse .url }}
-          <span class="favicon" style="background-image: url({{ .favicon | default (printf "%s/favicon.ico" .url ) }});"></span
-            ><a href="{{ .url }}" target="_blank">{{ .name }}</a>
-        </div>
-        <div class="description">
-          {{- .domain | default $url.Host }}
-          {{- with .description }}<span class="delimiter"></span>{{ . }}{{- end }}
-        </div>
-      </div>
-    {{ end }}
-  </div>
-</article>
-
+{{- if .Content }}
+<div class="post-content">
+  {{- if not (.Param "disableAnchoredHeadings") }}
+  {{- partial "anchored_headings.html" .Content -}}
+  {{- else }}{{ .Content }}{{ end }}
+</div>
 {{- end }}
+
+
+{{- $pages := .Pages }}
+{{- $pages = where $pages "Params.hidden" "!=" true }}
+
+{{/* related issue: https://github.com/gohugoio/hugo/issues/9003 */}}
+{{ $paginator := "" }}
+{{ if (.Param "paginate") }}
+{{- $paginator = .Paginate $pages (.Param "paginate") }}
+{{ else }}
+{{- $paginator = .Paginate $pages }}
+{{ end }}
+
+{{- $term := .Data.Term }}
+{{- range $index, $page := $paginator.Pages }}
+
+<article class="post-entry">
+  <h2 class="entry-title">
+    <a aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}">
+      {{- .Title }}
+      {{- if .Draft }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[Draft]</span></sup>{{- end }}
+      {{- if .Weight }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[Pinned]</span></sup>{{- end }}
+    </a>
+  </h2>
+  <div class="post-meta">
+    {{- if not (.Param "hideMeta") }}
+    {{- partial "post_meta.html" . -}}
+    {{- end }}
+  </div>
+  <section class="post-content">
+    {{ .Content }}
+  </section>
+</article>
+{{- end }}
+
+{{- if gt $paginator.TotalPages 1 }}
+<footer class="page-footer">
+  <nav class="pagination">
+    {{- if $paginator.HasPrev }}
+    <a class="prev" href="{{ $paginator.Prev.URL | absURL }}">« {{ i18n "prev_page" }}</a>
+    {{- end }}
+    {{- if $paginator.HasNext }}
+    <a class="next" href="{{ $paginator.Next.URL | absURL }}">{{ i18n "next_page" }} »</a>
+    {{- end }}
+  </nav>
+</footer>
+{{- end }}
+
+{{- end }}{{- /* end main */ -}}
