--- a/themes/PaperModX/layouts/partials/footer.html
+++ b/themes/PaperModX/layouts/partials/footer.html
@@ -3,6 +3,22 @@
 
 {{- if not (.Param "hideFooter") }}
 <footer class="footer" >
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var swiper = new Swiper('.swiper-container', {
+        loop: true,
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+        slidesPerView: 1,
+      });
+    });
+  </script>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -165,7 +181,7 @@
     var link = {{ .RelPermalink}};
     var title = {{ .Title }};
 
-    // multiple posts in same day
+    // multiple stories in same day
     if (value == null) {
       dataMap.set(key, [{wordCount, link, title}]);
     } else {
@@ -180,7 +196,7 @@
     var link = {{ .RelPermalink}};
     var title = {{ .Title }};
 
-    // multiple posts in same day
+    // multiple stories in same day
     if (value == null) {
       dataMap.set(key, [{wordCount, link, title}]);
     } else {
@@ -501,6 +517,7 @@
   // });
   InstantClick.init();
 </script>
+
 {{- end }}
 
 {{- end -}}
